Add Columns to Users

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 
 # Ignore bundler config.
 /.bundle
-/___master.key
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
@@ -32,6 +31,7 @@
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
+/config/master.key
 /config/___master.key
 
 /public/packs
