--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-/config/___master.key
+/config/credentials.yml.enc
 
 /public/packs
 /public/packs-test
